[package]
name = "savga"
version = "0.1.0"
authors = ["Weilbyte <git@weilbyte.dev>"]
description = "Simple and lightweight media host, written in Rust."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
redis = "0.16.0"
nanoid = "0.1.3"
rocket-multipart-form-data = "0.9.4"
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
